tests/NormalTests/paczka1/fuzzy1/60039759.err
Error in line 5: Xmi A479 26,9
Error in line 10: Mv0XQRY S178 26,3
Error in line 35: Xmi A285 96,8
